...
  bool _isSaving = false;
  bool _isEmailVerified = false;
  bool _isSendingVerification = false;
  String _currentEmail = '';

  final List<String> _businessTypes = [
    'Pet Shop',
    'Skincare',
    'UD (Usaha Dagang)',
    'Toko Kelontong / Perseorangan',
    'Lainnya'
  ];
  String? _selectedBusinessType;
...
        businessType: _selectedBusinessType ?? 'Lainnya',
        profileImage: _newProfileImage,
      );

      if (mounted) {
          ScaffoldMessenger.of(context).showSnackBar(
            const SnackBar(content: Text('Profil berhasil diperbarui!')),
          );
          Navigator.pop(context, true);
        }
    } catch (e) {
      if (mounted) {
        ScaffoldMessenger.of(context).showSnackBar(
...
